## PLUXML 6.0 (yyyy/mm/dd) ##
[+] Add Fontello config.json and new icons #417 (bazooka07)
[+] Enable or disable short words removal in URL generation, disabled by default (P3ter)
[+] Add plxUtils::getConfigParam() which return the value of a specific PluXml configuration key (P3ter)
[+] lang files cleaning #389 (bazooka07)
[+] plxUtils::unSlash($content) recursive for multidimentional array #286 (sudwebdesign)
[+] $LANGS array replaced with constants #389 (bazooka07)
[+] lostpassword token generation refacto #385 (P3ter)
[+] plxDate and plxShow optimisations : str_replace() replaced by strtr() #407 (bazooka07)
[+] Default theme : add font-display swap #427 (guiguid)
[+] plx classes autoload #431 (bazooka07)
[+] $plxShow->lastArtList() optimisations #433 (bazooka07)
[+] $plxShow->urlPostsRssFeed() optimisations #435 (bazooka07)
[+] $plxMotor->getTags() optimisations #437 (bazooka07)
FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
FIX Missing polish translations #374 (P3ter)
FIX Article edition always show comments as enabled #402 (bazooka07)
FIX $plxShow->artNbCom() with no comments #432 (bazooka07)
FIX $plxShow->lastArtList() chapo and content length #433 (P3ter)
FIX Templates sorting in static page admin #440 (bazooka07)

## PLUXML 5.8.3 (yyyy/mm/dd) ##
[+] Enhancement for CSRF token #385 (bazooka07)
[+] New "rename" and "copy to clipboard" icons in medias administration page #387 (bazooka07)
[+] plxMotor and plxFeed regex refacto #380 (P3ter, bazooka07)
[+] plxToken and plxCapcha optimisations #406 (bazooka07)
[+] plxShow->artThumbnail can have a link to the article #426 (Thatoo)
FIX Articles and static pages with underscores are not visible #380 (P3ter)
FIX Headline and Tags toggles always closed in article edition #382 (sudwebdesign)